Use separate HTML/JS/CSS, we're not savages

--- a/manifest_firefox.json
+++ b/manifest_firefox.json
@@ -37,5 +37,10 @@
             ],
             "run_at": "document_idle"
         }
+    ],
+    "web_accessible_resources": [
+        "panel.html",
+        "panel.css",
+        "icons/sprites.svg"
     ]
 }
