--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -32,5 +32,17 @@
             ],
             "run_at": "document_idle"
         }
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": [
+                "panel.html",
+                "panel.css",
+                "icons/sprites.svg"
+            ],
+            "matches": [
+                "<all_urls>"
+            ]
+        }
     ]
 }
