--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Lidar",
-    "description": "Visual data scraper with reusable rules - like Pocket meets web scraping",
-    "version": "1.0.0",
+    "description": "Create rules to automatically scrape websites as you browse.",
+    "version": "0.1.0",
     "icons": {
         "16": "icons/icon16.png",
         "48": "icons/icon48.png",
