--- a/manifest_firefox.json
+++ b/manifest_firefox.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
     "name": "Lidar",
-    "description": "Visual data scraper with reusable rules - like Pocket meets web scraping",
-    "version": "1.0.0",
+    "description": "Create rules to automatically scrape websites as you browse.",
+    "version": "0.1.0",
     "icons": {
         "16": "icons/icon16.png",
         "48": "icons/icon48.png",
@@ -42,5 +42,17 @@
         "panel.html",
         "panel.css",
         "icons/sprites.svg"
-    ]
+    ],
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "lidar-ext@alganet.github.io",
+            "strict_min_version": "142.0",
+            "data_collection_permissions": {
+                "required": [
+                    "websiteContent",
+                    "websiteActivity"
+                ]
+            }
+        }
+    }
 }
