Move source to src, extract redundancies

--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -20,7 +20,7 @@
         "<all_urls>"
     ],
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "src/background.js"
     },
     "content_scripts": [
         {
@@ -28,7 +28,8 @@
                 "<all_urls>"
             ],
             "js": [
-                "autoapply.js"
+                "src/utils.js",
+                "src/autoapply.js"
             ],
             "run_at": "document_idle"
         }
@@ -36,8 +37,8 @@
     "web_accessible_resources": [
         {
             "resources": [
-                "panel.html",
-                "panel.css",
+                "src/panel.html",
+                "src/panel.css",
                 "icons/sprites.svg"
             ],
             "matches": [
