Improve JS separation of concerns, MIGRATIONS.md docs

--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -28,7 +28,9 @@
                 "<all_urls>"
             ],
             "js": [
-                "src/utils.js",
+                "src/messaging.js",
+                "src/rules.js",
+                "src/scraping.js",
                 "src/autoapply.js"
             ],
             "run_at": "document_idle"
