--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,11 @@
+# SPDX-FileCopyrightText: 2025 Alexandre Gomes Gaigalas <alganet@gmail.com>
+#
+# SPDX-License-Identifier: ISC
+
 name: CI
+
+permissions:
+  contents: read
 
 on:
   push:
@@ -7,20 +14,37 @@ on:
     branches: [ main ]
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
-
+    
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+    
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Use Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v6
+    
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v6
       with:
-        node-version: '20.x'
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
-
+    
     - name: Install dependencies
       run: npm ci
-
+    
     - name: Run lint
       run: npm run lint
+    
+    - name: Run unit tests
+      run: npm test
+    
+    - name: Run tests with coverage
+      run: npm run test:coverage
+    
+    - name: Archive coverage results
+      uses: actions/upload-artifact@v5
+      if: matrix.node-version == '20.x'
+      with:
+        name: coverage-report
+        path: coverage/
