--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Alexandre Gomes Gaigalas <alganet@gmail.com>
+#
+# SPDX-License-Identifier: ISC
+
 node_modules/
+coverage/
 manifest.json
