--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "lidar",
-  "version": "1.0.0",
-  "description": "<!-- SPDX-FileCopyrightText: 2025 Alexandre Gomes Gaigalas <alganet@gmail.com>",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "Create rules to automatically scrape websites as you browse.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest tests/unit",
     "lint": "eslint src"
   },
   "repository": {
@@ -12,7 +14,7 @@
     "url": "git+https://github.com/alganet/lidar.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexandre Gomes Gaigalas <alganet@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alganet/lidar/issues"
@@ -20,7 +22,11 @@
   "homepage": "https://github.com/alganet/lidar#readme",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/jest": "^30.0.0",
     "eslint": "^9.39.1",
-    "globals": "^16.5.0"
+    "fake-indexeddb": "^6.2.5",
+    "globals": "^16.5.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0"
   }
 }
