Update manifest permissions

--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -13,8 +13,8 @@
     },
     "permissions": [
         "activeTab",
-        "storage",
-        "scripting"
+        "scripting",
+        "tabs"
     ],
     "background": {
         "service_worker": "src/background.js"
