--- a/manifest_firefox.json
+++ b/manifest_firefox.json
@@ -17,9 +17,7 @@
     },
     "permissions": [
         "activeTab",
-        "storage",
-        "tabs",
-        "<all_urls>"
+        "tabs"
     ],
     "background": {
         "scripts": [
